<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinuxGuide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="linux_title">Linux Guide</string>
    <string name="linux_command">Commands</string>
    <string name="linux_install_guide">Install Guide</string>
    <string name="linux_tips">Tips</string>
    <string name="linux_faq">FAQ</string>
    <string name="linux_news">Linux News</string>
    <string name="about">About</string>
    <string name="install_title">Install Guides</string>
    <string name="android_version"> Android Version: </string>
    <string name="cpu_type"> CPU type: </string>
    <string name="ubuntu1304">Ubuntu 13.04</string>
    <string name="ubuntu1310">Ubuntu 13.10</string>
    <string name="debian">Debian</string>
    <string name="debian_testing">Debian Testing</string>
    <string name="archlinux">ArchLinux</string>
    <string name="kali_linux">Kali Linux</string>
    <string name="fedora">Fedora 19</string>
    <string name="openSUSE">openSUSE 12.3</string>
    <string name="guide_download1">The large image is 1.5Gb and it include a wide range of program from python to open office.you have 1.5Gb for your own space</string>
    <string name="guide_download2">The small image is 0.5Gb and it include only basic app.you have 1.5Gb for your own space</string>
    <string name="guide_download3">The core image is 0.25Gb and it include only the OS</string>
    <string name="command_title">Linux Commands</string>
    <string name="provided_command">Provided Commands</string>
    <string name="your_command">Your Saved Commands</string>
    <string name="more_commands">More Complete List Of Commands</string>
    <string name="command_daily">Daily Commands</string>
    <string name="no_internet">The content is loading, Please wait for a while, if there is nothing after 2 minutes, please check your internet connection</string>
    <string name="no_command">No command, click the plus button to add new command</string>
    <string name="new_command">New Command</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="command">Command:</string>
    <string name="description">Description:</string>
    <string name="enter_new_command">Enter new command here!</string>
    <string name="enter_description">Enter the description here!</string>

</resources>