<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/command_daily"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_daily" />

    <Button
        android:id="@+id/command_provided"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/provided_command" />

    <Button
        android:id="@+id/command_your"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_command" />

    <Button
        android:id="@+id/commands_more"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_commands" />

</LinearLayout>